--- a/index.html
+++ b/index.html
@@ -69,3 +69,14 @@
     </div>
 </body>
 </html>
+<div id="userProfile">
+    <h3>👤 Ваш профиль</h3>
+    <select id="dietType">
+        <option value="keto">Кето</option>
+        <option value="vegan">Веган</option>
+        <option value="lowcarb">Низкоуглеводное</option>
+        <option value="mediterranean">Средиземноморское</option>
+    </select>
+    <input type="number" id="maxCalories" placeholder="Макс. калории">
+    <button onclick="savePreferences()">💾 Сохранить</button>
+</div>
